[package]
name = "very-thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5" # HTTP 服务器
anyhow = "1.0.82" # 错误处理
base64 = "0.22.0" # base64 编码和解码
bytes = "1.6.0" # 处理字节流
image = "0.25.1" # 处理图片
lazy_static = "1.4.0" # 通过宏方便地初始化静态变量
lru = "0.12.3" # LRU 缓存
percent-encoding = "2.3.1" # url 编码和解码
photon-rs = "0.3.2" # 图片效果
prost = "0.12.4" # 处理 protobuf
reqwest = "0.12.4" # HTTP 客户端
serde = { version = "1.0.198", features = ["derive"] } # JSON 序列化和反序列化
tokio = { version = "1.37.0", features = ["full"] } # 异步运行时库
tower = { version = "0.4.13", features = [
    "util",
    "timeout",
    "load-shed",
    "limit",
] } # 服务处理以及中间件
tower-http = { version = "0.5.2", features = [
    "add-extension",
    "compression-full",
    "trace",
] } # HTTP 中间件
tracing = "0.1.40" # 日志和追踪相关
tracing-subscriber = "0.3.18" # 日志和追踪相关

[build-dependencies]
prost-build = "0.12.4" # 编译 protobuf
